# mcp-governance-system

./: .env.example  .gitignore  MCP_Tool_Governance_PRD.md  MTGS_PRD_v2.0.docx  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
benchmarks/: locustfile.py
cli/: __init__.py  main.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
dashboard/src/: index.css  main.tsx  vite-env.d.ts
dashboard/src/api/: client.ts  endpoints.ts
dashboard/src/components/charts/: ConflictMapD3.tsx  ConflictTrendChart.tsx  HealthGauge.tsx
dashboard/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
dashboard/src/components/ui/: Badge.tsx  Card.tsx  EmptyState.tsx  Spinner.tsx
dashboard/src/lib/: utils.ts
dashboard/src/pages/: AnalysisPage.tsx  ApprovalsPage.tsx  AuditPage.tsx  ConflictsPage.tsx  DashboardPage.tsx  SettingsPage.tsx  ToolsPage.tsx
dashboard/src/types/: index.ts
docker/: Dockerfile  docker-compose.yml
docs/: api-reference.md  architecture.md  cli.md  configuration.md  conflict-detection.md  dashboard-explainer.md  dashboard.md  deployment.md  failure-mode-analysis.md  getting-started.md  local-testing-guide.md  workflow-diagrams.md
docs/adr/: ADR-001-python-fastapi-stack.md  ADR-002-azure-openai-embeddings.md  ADR-003-azure-ai-search-for-ann.md  ADR-004-celery-redis-async-workers.md  ADR-005-recommendation-only-no-auto-apply.md  ADR-006-english-only-v1.md  ADR-007-weighted-linear-conflict-score.md  ADR-008-react-typescript-dashboard.md  ADR-009-claude-for-simulation-and-recommendations.md  ADR-010-manual-import-v1.md  ADR-011-critical-suppression-approval.md  README.md
mtgs/: __init__.py  config.py  database.py  main.py
mtgs/api/: middleware.py
mtgs/api/v1/: analysis_runs.py  approvals.py  audit_logs.py  conflicts.py  health.py  tools.py  webhooks.py
mtgs/auth/: dependencies.py  security.py
mtgs/core/: __init__.py  orchestrator.py  tool_def.py
mtgs/core/approval/: __init__.py  service.py  workflow.py
mtgs/core/audit/: __init__.py  logger.py  service.py
mtgs/core/conflict_detection/: __init__.py  lexical.py  pipeline.py  schema_analysis.py
mtgs/core/embeddings/: __init__.py  azure_search_client.py  fingerprinter.py  openai_client.py
mtgs/core/notifications/: __init__.py  service.py
mtgs/core/probe_generation/: __init__.py  generator.py
mtgs/core/recommendations/: __init__.py  engine.py
mtgs/core/resilience/: __init__.py  circuit_breaker.py
mtgs/core/simulation/: __init__.py  impact_simulator.py
mtgs/core/sync/: __init__.py  mcp_sync.py
mtgs/models/: __init__.py  analysis_run.py  conflict.py  environment.py  mcp_server.py  mixins.py  organization.py  probe_query.py  recommendation.py  tool.py  user.py
mtgs/schemas/: analysis.py  analysis_run.py  approval.py  audit.py  common.py  conflict.py  recommendation.py  tool.py
mtgs/utils/: __init__.py  logging.py
mtgs/workers/: __init__.py  celery_app.py  tasks.py
tests/: __init__.py  conftest.py
tests/fixtures/: tool_fixtures.py
tests/integration/: test_conflict_pipeline_integration.py
tests/unit/: test_analysis_orchestrator.py  test_analysis_run_api.py  test_approval_api.py  test_approval_workflow.py  test_audit_api.py  test_audit_log.py  test_azure_clients.py  test_circuit_breaker.py  test_conflict_pipeline.py  test_fingerprinter.py  test_impact_simulator.py  test_lexical_detection.py  test_mcp_sync.py  test_notification_service.py  test_probe_generator.py  test_recommendation_engine.py  test_schema_analysis.py
